--- a/public/assets/style-folder/style.css
+++ b/public/assets/style-folder/style.css
@@ -1767,6 +1767,32 @@ input[type=number] {
 }
 
 
+.many-check-box .paren-check-box {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.many-check-box .paren-check-box div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+
+.many-check-box .paren-check-box input[type="number"] {
+   background-color: white !important;
+    border: 1px solid #aaa;
+    border-radius: 4px;
+    cursor: text;
+    position: relative;
+    width: 140px !important;
+    padding: 10px;
+}
+
+
 .notification-box-main .close-btn-box a {
     background-color: #D9D9D9;
     color: black;
@@ -2307,6 +2333,12 @@ font-size: 20px;
 margin-bottom: 2px;
 }
 
+.many-forms-fields-box label{
+    color: #414141;
+font-size: 20px;
+margin-bottom: 2px;
+}
+
 .add-property-form-sec .many-forms-fields-box .input-box input,.add-property-form-sec .many-forms-fields-box .input-box select {
 width: 100%;
 height: 50px;
@@ -2317,7 +2349,7 @@ color: black;
 margin-bottom: 20px;
 }
 
-
+.paren-check-box {display: flex;align-items: center;gap: 10px;}
 
 .add-property-form-sec .many-forms-fields-box .input-box.textarea textarea{
     height: 150px;
@@ -2362,7 +2394,7 @@ margin-top: -5px;
     margin-bottom: 15px;
 }
 
-.add-property-form-sec .many-check-box .paren-check-box input {
+.add-property-form-sec .many-check-box .paren-check-box input, input[type="checkbox"] {
     width: 20px;
     height: 20px;
     background-color: #E5E5E5;
