--- a/public/assets/style-folder/style.css
+++ b/public/assets/style-folder/style.css
@@ -1784,12 +1784,13 @@ input[type=number] {
 
 .many-check-box .paren-check-box input[type="number"] {
    background-color: white !important;
-    border: 1px solid #aaa;
-    border-radius: 4px;
-    cursor: text;
-    position: relative;
+    border: 1px solid #aaa !important;
+    border-radius: 4px !important;
+    cursor: text !important;
+    position: relative !important;
     width: 140px !important;
-    padding: 10px;
+    padding: 10px !important;
+    height: 40px !important;
 }
 
 
