--- a/public/assets/style-folder/style.css
+++ b/public/assets/style-folder/style.css
@@ -651,7 +651,7 @@ table.dataTable th.dt-type-numeric, table.dataTable th.dt-type-date, table.dataT
 
 #propertiesTable, #categoryTable, .fixed-scroll-table {
     margin-bottom: 25px;
-    height: 700px !important;
+    height: 600px !important;
     overflow: scroll !important;
     overflow-x: hidden !important;
     display: block;
@@ -666,7 +666,7 @@ table.dataTable th.dt-type-numeric, table.dataTable th.dt-type-date, table.dataT
     border-radius: 100%;
 }
 
-#propertiesTable th, #categoryTable th {
+#propertiesTable th, #categoryTable th, #roomFeaturesTable th {
     color: #5A5A5A;
     font-size: 17px;
 }
@@ -675,7 +675,7 @@ table{
     --bs-table-striped-bg:transparent !important;
 }
 
-#propertiesTable td ,#categoryTable td {
+#propertiesTable td, #categoryTable td, #roomFeaturesTable td {
     padding: 20px 0;
     border-bottom: 1px solid #DEDEDE;
     background: transparent !important;
@@ -686,12 +686,12 @@ table{
     background: #F6F6F6;
     border-radius: 50px;
     width: max-content;
-    float: right;
     padding: 10px 30px;
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 20px;
+    justify-self: center;
 }
 
 .property-action-buttons .btn-success:hover {
@@ -3635,6 +3635,71 @@ input[type="file"] {
 
 .propertieslistings-page .properties_details_main .properties_name_add .add a.Delet-btn:hover {
     background-color: black;
+}
+
+
+#roomFeaturesTable td:last-child, #roomFeaturesTable th:last-child {
+    text-align: center;
+}
+
+.swal2-container.swal2-center>.swal2-popup {
+    border-radius: 30px;
+}
+
+.swal2-container.swal2-center>.swal2-popup .swal2-actions {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.swal2-container.swal2-center>.swal2-popup .swal2-actions button {
+    margin: 0;
+    padding: 10px 40px;
+    border-radius: 10px;
+    font-size: 17px;
+    font-weight: 600;
+    border: none !important;
+}
+
+.swal2-container.swal2-center>.swal2-popup .swal2-actions .swal2-confirm {
+    background: linear-gradient(45deg, #0077B6 0%, #96CAE6) !important;
+}
+
+.swal2-container.swal2-center>.swal2-popup .swal2-actions .swal2-cancel {
+    background: #999999 !important;
+}
+
+
+.modal-cancel-btn {
+    padding: 10px 40px;
+    border-radius: 10px;
+    font-size: 17px;
+    background: #999999;
+    color: #fff;
+    font-weight: 600;
+}
+
+.modal-body input {
+    background: #F6F6F6;
+    border: 1px solid #DEDEDE;!;
+    width: 100%;
+    border-radius: 10px;
+    padding: 10px 20px;
+    color: #999999;
+}
+
+.modal-body {
+    padding: 0;
+    margin: 30px 0;
+}
+
+.modal {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    align-content: center;
 }
 
 @media (min-width: 1400px) {
